--- a/src/index.html
+++ b/src/index.html
@@ -3,19 +3,19 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js">
+<html class="no-js" lang="en">
     <!--<![endif]-->
     <head>
         <!-- List of defaults meta tags; you can either add or remove meta tags as per your requirements. -->
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-        <meta name="viewport" content="width=device-width"/>
-        <meta name="author" content="staff of metatags"/>
-        <meta name="copyright" content="the Meta Tags Company"/>
-        <meta name="description" content="text"/>
-        <meta name="keywords" content="text"/>
+        <meta name="viewport" content="width=device-width,initial-scale=1"/>
+        <meta name="author" content="Cybage UI"/>
+        <meta name="copyright" content="Cybage UI"/>
+        <meta name="description" content="Cybage UI- Greetings"/>
+        <meta name="keywords" content="Cybage UI"/>
 
-        <title>Cybage - IMS</title>
+        <title>Cybage UI- Greetings</title>
 
         <!--
             main.css; Contains all stylesheets links.
@@ -30,8 +30,6 @@
 
         <div class="container"></div>
 
-        <!-- Included modernizr for HTML5 Browser support detection. -->
-        <script src="js/vendors/modernizr/modernizr.custom.js" type="text/javascript"></script>
         <!-- Placed at the end of the document so the pages would load faster -->
         <script data-main="js/main" src="js/vendors/require/require.js" type="text/javascript"></script>
         <!-- Included to support JSON on older browsers -->
